OPTIMUS-36426 export changes from a0c3e28cf985ad4574ce2058ba15e6f417cab58a